commandLine/lol
calcMain.c:22:1: error: expected ‘;’, identifier or ‘(’ before ‘char’
 char  Colors = {"black","brown","red","orange","yellow","green","blue","violet","grey","white","gold","silver","none",
 ^
calcMain.c:22:1: warning: initialization makes integer from pointer without a cast [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: error: initializer element is not computable at load time
calcMain.c:22:1: error: (near initialization for ‘Colors’)
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:22:1: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:22:1: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
     "bl","br","re","or","ye","gr","b","vi","gr","wh","go","si","no"};
     ^
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
calcMain.c:23:5: warning: excess elements in scalar initializer [enabled by default]
calcMain.c:23:5: warning: (near initialization for ‘Colors’) [enabled by default]
